k8s/apache-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  selector:
    app: apache
  ports:
    - port: 80
      targetPort: 80
