k8s/app-deploy.yaml
## DEPLOY APP WEB NO NAMESPACE 'APP'

apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: 058264204627.dkr.ecr.us-east-1.amazonaws.com/app-eks-app:latest
      imagePullSecrets:
        - name: ecr-credentials


---
## DEPLOY SERVICE WEB APP NO NAMESPACE 'APP'

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  selector:
    app: app
  ports:
    # Porta referente a URL:81
    - port: 81
      targetPort: 80
  type: LoadBalancer
