k8s/wildfly-deploy.yaml
## DEPLOY WEB NO NAMESPACE 'wildfly'
apiVersion: v1
kind: Namespace
metadata:
  name: wildfly
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wildfly
  namespace: wildfly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wildfly
  template:
    metadata:
      labels:
        app: wildfly
    spec:
      containers:
      - name: wildfly
        image: 058264204627.dkr.ecr.us-east-1.amazonaws.com/wildfly-javaserver-1:latest
        ports:
        - containerPort: 9990
      imagePullSecrets:
      - name: ecr-credentials

---
## DEPLOY SERVICE WEB NO NAMESPACE 'wildfly'
apiVersion: v1
kind: Service
metadata:
  name: wildfly
  namespace: wildfly
spec:
  selector:
    app: wildfly
  ports:
    - port: 9990
      targetPort: 9990
