k8s/apache-logs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-httpd
  template:
    metadata:
      labels:
        app: apache-httpd
    spec:
      containers:
      - name: apache-httpd
        image: httpd:2.4
        ports:
        - containerPort: 80
        volumeMounts:
        - name: apache-config-volume
          mountPath: /usr/local/apache2/conf/httpd.conf
          subPath: httpd.conf
        - name: efs-logs
          mountPath: /usr/local/apache2/htdocs  # Monta o volume EFS para servir arquivos
      volumes:
      - name: apache-config-volume
        configMap:
          name: apache-config
      - name: efs-logs
        persistentVolumeClaim:
          claimName: efs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: app
  labels:
    app: apache-httpd
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: apache-httpd
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Modificado para usar capture group
spec:
  rules:
  - host: ""  
    http:
      paths:
      - path: /apache(/|$)(.*)  # Modificado para capturar o path /apache
        pathType: Prefix
        backend:
          service:
            name: httpd-service
            port:
              number: 80
