k8s/logs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-logs-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-logs
  template:
    metadata:
      labels:
        app: nginx-logs
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: efs-logs
          mountPath: /efs   # dir dentro do container onde o EFS será montado
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: efs-logs
        persistentVolumeClaim:
          claimName: efs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-logs-service
  namespace: app
  labels:
    app: nginx-logs
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-logs
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-logs-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-logs-service
            port:
              number: 80
